--- a/workspace/iTunes-Search-iOS/Views/MovieDetails/MovieDetailsView.xib
+++ b/workspace/iTunes-Search-iOS/Views/MovieDetails/MovieDetailsView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="GYF-gm-QMT">
-                    <rect key="frame" x="24" y="32" width="327" height="611"/>
+                    <rect key="frame" x="24" y="12" width="327" height="631"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie" translatesAutoresizingMaskIntoConstraints="NO" id="Yox-RV-oTp">
                             <rect key="frame" x="0.0" y="0.0" width="327" height="327"/>
@@ -53,14 +51,14 @@
                             </constraints>
                         </stackView>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhZ-qW-pG5">
-                            <rect key="frame" x="0.0" y="379" width="327" height="184"/>
+                            <rect key="frame" x="0.0" y="379" width="327" height="204"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFQ-oD-AH6">
-                            <rect key="frame" x="0.0" y="567" width="327" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFQ-oD-AH6">
+                            <rect key="frame" x="0.0" y="587" width="327" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="YVk-DR-fx0"/>
                             </constraints>
@@ -73,6 +71,7 @@
                     </subviews>
                 </stackView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="ZJI-wy-iJu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="GYF-gm-QMT" firstAttribute="leading" secondItem="ZJI-wy-iJu" secondAttribute="leading" constant="24" id="8yr-BN-E5M"/>
@@ -80,7 +79,6 @@
                 <constraint firstItem="ZJI-wy-iJu" firstAttribute="bottom" secondItem="GYF-gm-QMT" secondAttribute="bottom" constant="24" id="ahK-CO-pNE"/>
                 <constraint firstItem="GYF-gm-QMT" firstAttribute="top" secondItem="ZJI-wy-iJu" secondAttribute="top" constant="12" id="qaA-N5-JI7"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZJI-wy-iJu"/>
             <connections>
                 <outlet property="descriptionTextView" destination="HhZ-qW-pG5" id="gk0-0C-Gro"/>
                 <outlet property="thumbnailImageView" destination="Yox-RV-oTp" id="tqu-4f-0fW"/>
@@ -92,6 +90,6 @@
     </objects>
     <resources>
         <image name="movie" width="512" height="512"/>
-        <image name="watchlist" width="87" height="87"/>
+        <image name="watchlist" width="29" height="29"/>
     </resources>
 </document>
